# customer-support-email-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: index.html
src/: main.py
src/api/: inbox.py  router.py
src/core/: config.py  llm.py
src/graph/: nodes.py  workflow.py
src/knowledge_base/: build_index.py  faq.json
src/knowledge_base/documents/: account_management.md  billing_and_payments.md  privacy_and_security.md  refund_policy.md  shipping_and_delivery.md  technical_troubleshooting.md
src/prompts/: templates.py
src/schemas/: email.py  state.py
src/services/: email_parser.py  email_store.py  followup_tracker.py  knowledge_base.py
src/utils/: logger.py
static/: api-docs.html  inbox.html  index.html
tests/: test_api.py  test_services.py
