[project]
name = "customer-support-email-agent"
version = "0.1.0"
description = "LangGraph-powered customer support email agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "langgraph==0.2.60",
    "langchain==0.3.13",
    "langchain-openai==0.2.14",
    "langchain-core==0.3.28",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "langchain-ollama>=0.2.2",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
